--- a/src/components/admin/navbar/Navbar.module.scss
+++ b/src/components/admin/navbar/Navbar.module.scss
@@ -1,46 +1,43 @@
-.table {
-    padding: 5px;
-    width: 100%;
-    overflow-x: auto;
-  
-    .search {
-      width: 100%;
-      max-width: 300px;
+.navbar {
+  border-right: 1px solid #ccc;
+  min-height: 80vh;
+
+  .user {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 4rem;
+    background-color: var(--light-blue);
+
+    h4 {
+      color: #fff;
     }
-  
-    table {
-      border-collapse: collapse;
-      width: 100%;
-      font-size: 1.4rem;
-  
-      thead {
-        border-top: 2px solid var(--light-blue);
-        border-bottom: 2px solid var(--light-blue);
-      }
-  
-      th {
-        border: 1px solid #eee;
-      }
-  
-      th,
-      td {
-        vertical-align: top;
-        text-align: left;
-        padding: 8px;
-        &.icons {
-          > * {
-            margin-right: 5px;
-            cursor: pointer;
-          }
-        }
-      }
-  
-      tr {
-        border-bottom: 1px solid #ccc;
-      }
-  
-      tr:nth-child(even) {
-        background-color: #eee;
+  }
+
+  nav ul {
+    li {
+      border-bottom: 1px solid #ccc;
+      padding: 1rem;
+      position: relative;
+      a {
+        display: block;
+        width: 100%;
       }
     }
   }
+}
+
+.active {
+  cursor: pointer;
+}
+
+.active::before {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  width: 4px;
+  height: 100%;
+  background-color: orangered;
+}
