Add search Filter to admin

--- a/src/components/search/Search.module.scss
+++ b/src/components/search/Search.module.scss
@@ -6,7 +6,7 @@
   .icon {
     position: absolute;
     top: 50%;
-    left: 8rem;
+    left: 1rem;
     transform: translateY(-50%);
   }
 
@@ -17,7 +17,7 @@
     padding: 1rem;
     padding-left: 3rem;
     margin: 1rem auto;
-    // width: 100%;
+    width: 100%;
     border: 1px solid #777;
     border-radius: 3px;
     outline: none;
